docs: updated documents and configurations

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
 pytorch==0.4.1
 numpy
 pandas
+gensim
+more_itertools
+progressbar2
+pathos
+matplotlib
 -e git+https://github.com/OpenNMT/OpenNMT-py.git
